services/ping-http/envoy.yaml
static_resources:
  listeners:
    - name: listener_1
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                route_config:
                  name: ping-http
                  virtual_hosts:
                    - name: ping-http
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: ping-http
                http_filters:
                  - name: envoy.filters.http.grpc_http1_reverse_bridge
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.filter.http.grpc_http1_reverse_bridge.v2alpha1.FilterConfig
                      content_type: application/grpc+proto
                      withhold_grpc_frames: true
                  - name: envoy.router
  clusters:
    - name: ping-http
      connect_timeout: 5.00s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: ping-http
            port_value: 8888
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
